Cambios agregados al sitio web de prueba

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Hola Mundo</title>
 </head>
 <body>
-  <p>Hola muchachos este es mi sitio web</p>  
+  <p>Hola muchachos este es mi sitio web de prueba para el curso de Prework</p>  
 </body>
 </html>
